--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Beafowl",
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "github:discordjs/opus",
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "nodemon": "^2.0.6",
+    "unirest": "^0.6.0"
   }
 }
